--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -18,8 +22,8 @@
 
 /* height of the container */
 .leaflet-container {
-  height: 90vh;
-  width: 90%;
+  height: 100%;
+  width: 100%;
   border-radius: 2rem;
 }
 
