--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -39,3 +39,7 @@
   font-size: 1.2rem;
   box-shadow: 0 0 0px 5px #fff;
 }
+
+.leaflet-control-container .leaflet-routing-container-hide {
+  display: none;
+}
