--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,3 +43,19 @@
 .leaflet-control-container .leaflet-routing-container-hide {
   display: none;
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: rgb(0, 0, 0, 0.2);
+  border: 2px solid transparent;
+  background-clip: content-box;
+}
